--- a/styles.css
+++ b/styles.css
@@ -44,17 +44,25 @@ h1, h2, h3 {
   margin: 0 0 10px;
 }
 
+.flex-wrapper {
+  display:flex;
+}
+
 .rep__committees,
 .rep__legislation {
   margin: 1%;
-  width: 48%;
+  /* width: 48%; */
   padding: 20px;
-  float: left;
+  /* float: left; */
   background-color: lightblue;
   border-radius: 7px;
 }
+.rep__committees {
+  flex: 1;
+}
 .rep__legislation {
-  float: right;
+  /* float: right; */
+  flex: 2;
 }
 
 .rep__committees ul,
